- implemented a more dynamic shader override that doesn't require a complete resource reload (thanks do Sander88)
git-svn-id: file:///home/daniel/p/trunk@18 adef16d5-ccce-44c9-a2ae-330ae9cf4c74

--- a/src/game/client/swarm_skeleton_client.vcxproj.filters
+++ b/src/game/client/swarm_skeleton_client.vcxproj.filters
@@ -1859,6 +1859,9 @@
     <ClCompile Include="deferred\vgui\vgui_particles.cpp">
       <Filter>Source Files\deferred\vgui</Filter>
     </ClCompile>
+    <ClCompile Include="deferred\materialsystem_passthru.cpp">
+      <Filter>Source Files\deferred</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="achievement_notification_panel.h">
@@ -4083,6 +4086,9 @@
     </ClInclude>
     <ClInclude Include="deferred\vgui\vgui_particles.h">
       <Filter>Source Files\deferred\vgui</Filter>
+    </ClInclude>
+    <ClInclude Include="deferred\materialsystem_passthru.h">
+      <Filter>Source Files\deferred</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
