- added multiblend support - fixed lightbuff lookup coords during cubemap generation
git-svn-id: file:///home/daniel/p/trunk@43 adef16d5-ccce-44c9-a2ae-330ae9cf4c74

--- a/src/materialsystem/swarmshaders/game_shader_generic_swarm.vcxproj
+++ b/src/materialsystem/swarmshaders/game_shader_generic_swarm.vcxproj
@@ -202,6 +202,7 @@ if exist "$(TargetDir)"$(ProjectName).map copy "$(TargetDir)"$(ProjectName).map 
     <ClCompile Include="debug_shadow.cpp" />
     <ClCompile Include="deferred_brush.cpp" />
     <ClCompile Include="deferred_model.cpp" />
+    <ClCompile Include="deferred_utility.cpp" />
     <ClCompile Include="defpass_composite.cpp" />
     <ClCompile Include="defpass_gbuffer.cpp" />
     <ClCompile Include="defpass_shadow.cpp" />
