-SSE optimisations for light culling and light sorting -Configurable sample frequency for volumetric effects
git-svn-id: file:///home/daniel/p/trunk@55 adef16d5-ccce-44c9-a2ae-330ae9cf4c74

--- a/src/materialsystem/swarmshaders/game_shader_generic_swarm.vcxproj
+++ b/src/materialsystem/swarmshaders/game_shader_generic_swarm.vcxproj
@@ -284,9 +284,12 @@ if exist "$(TargetDir)"$(ProjectName).map copy "$(TargetDir)"$(ProjectName).map 
     <None Include="defconstruct_vs30.fxc" />
     <None Include="deferred_shaders.txt" />
     <None Include="gaussianblur_6_ps30.fxc" />
+    <None Include="gbuffer_defshading2_ps30.fxc" />
+    <None Include="gbuffer_defshading2_vs30.fxc" />
     <None Include="gbuffer_defshading_ps30.fxc" />
     <None Include="gbuffer_ps30.fxc" />
     <None Include="gbuffer_vs30.fxc" />
+    <None Include="lightingpass_area_ps30.fxc" />
     <None Include="lightingpass_global_ps30.fxc" />
     <None Include="lightingpass_point_ps30.fxc" />
     <None Include="lightingpass_spot_ps30.fxc" />
