--- a/src/materialsystem/swarmshaders/makefile.deferred_shaders_short.copy
+++ b/src/materialsystem/swarmshaders/makefile.deferred_shaders_short.copy
@@ -1,10 +1,10 @@
+gbuffer_vs30.fxc-----gbuffer_vs30
+gbuffer_ps30.fxc-----gbuffer_ps30
+gbuffer_defshading_ps30.fxc-----gbuffer_defshading_ps30
+screenspace_shading_ps30.fxc-----screenspace_shading_ps30
+screenspace_combine_ps30.fxc-----screenspace_combine_ps30
 radiosity_gen_global_ps30.fxc-----radiosity_gen_global_ps30
 radiosity_gen_vs30.fxc-----radiosity_gen_vs30
 radiosity_propagate_ps30.fxc-----radiosity_propagate_ps30
 radiosity_propagate_vs30.fxc-----radiosity_propagate_vs30
 radiosity_blend_ps30.fxc-----radiosity_blend_ps30
-debug_radiosity_grid_ps30.fxc-----debug_radiosity_grid_ps30
-debug_radiosity_grid_vs30.fxc-----debug_radiosity_grid_vs30
-shadowpass_vs30.fxc-----shadowpass_vs30
-shadowpass_ps30.fxc-----shadowpass_ps30
-lightingpass_global_ps30.fxc-----lightingpass_global_ps30
